Finish base exchange component with wallet change, finish exchange button

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -3,6 +3,7 @@ $font-main: 'Century Gothic', 'Helvetica Neue', sans-serif;
 $color-font-main: #fefefe;
 $color-font-sub:#cecece;
 $color-error:#b16a87;
+$color-focus:#30887c;
 
 $theme-color-main-1: #527cc2;
 $theme-color-main-2: #614adf;
