Add currency changing, change currency input values representation to string, fix currency formatting and input issues, extract exchange rate label to component, set up preliminary test structure, improve styling and responsive layout

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -7,3 +7,6 @@ $color-focus:#30887c;
 
 $theme-color-main-1: #527cc2;
 $theme-color-main-2: #614adf;
+
+$z-index-divider: 10;
+$z-index-currency-info: 20;
