--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -7,3 +7,12 @@
     font-family: $font-main;
   }
 }
+
+@mixin resetButton {
+  button {
+    background: none;
+    outline: none;
+    border: none;
+    padding: 0;
+  }
+}
