--- a/src/components/Exchange/Exchange.scss
+++ b/src/components/Exchange/Exchange.scss
@@ -6,9 +6,8 @@
   flex-flow: column;
   height: 100%;
 
-
   .exchange__top-part {
-    flex: 4 0 auto;
+    flex: 3 0 auto;
   }
 
   .exchange__bottom-part {
@@ -28,45 +27,15 @@
     padding-left: 2rem;
     margin-top: 80px;
 
-    .exchange-operand__value-container {
+    &__value-container {
       margin-left: 10vw;
       width: 100%;
       max-width: calc(100vw - 4em);
       overflow: hidden;
     }
-  }
 
-  .divider {
-    $divider-line-color: #9886b5;
-    $divider-chevron-color: #b098d6;
-    $chevron-size: 40px;
-
-    width: 100%;
-    flex: 0 1 auto;
-    border-bottom: 1px solid $divider-line-color;
-    display: inline-block;
-    position: relative;
-    text-align: center;
-
-    .divider__chevron, .divider__chevron-border {
-
-      display: inline-block;
-      width: $chevron-size;
-      height: $chevron-size;
-      position: absolute;
-      transform-origin: center;
-      transform: rotate(45deg) translate(-$chevron-size / 2, $chevron-size / 2);
-    }
-
-    .divider__chevron {
-      background: linear-gradient(180deg, #5f50db 0%, #6049df 100%);
-      z-index: 10;
-      top: -$chevron-size / 2;
-    }
-
-    .divider__chevron-border {
-      background-color: $divider-chevron-color;
-      top: -($chevron-size / 2) + 1;
+    &--dimmed {
+      opacity: 0.5;
     }
   }
 
